# crawler

./: .gitignore  EMAIL_DRAFT.txt  PROJECT_REPORT.md  README.md  crawler.py  pyproject.toml
modular_code_replacement_for_crawler_py/: .gitignore  main.py  requirements.txt
modular_code_replacement_for_crawler_py/src/: config.py  context_mapper.py  crawler.py  graph_extractor.py  hooks.py  link_selector.py  llm.py  network_parser.py  parser.py  pdf_pipeline.py  schemas.py  utils.py  validators.py  vision_extractor.py
presentation_layer/: index.html
